# WLA

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.gradle  local.properties  settings.gradle
res/values/: strings.xml
res/values-v27/: styles.xml
